# ChangeLog for media-video/smplayer2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*smplayer2-9999 (05 Nov 2011)
*smplayer2-0.7.0_pre20111022 (05 Nov 2011)

  05 Nov 2011; Nikoli <nikoli@lavabit.com> +files/smplayer-0.6.8-quit.patch,
  +smplayer2-0.7.0_pre20111022.ebuild, +smplayer2-9999.ebuild,
  +files/smplayer2-system-quazip.patch, +metadata.xml:
  initial ebuilds
