@@ -2,6 +2,6 @@ AUX smplayer-0.6.8-quit.patch 560 RMD160 cb43ba1933b977b4fecb19dd41bac00aca38222
 AUX smplayer2-system-quazip.patch 2600 RMD160 2057953aa5caa7c63af8513c4dc85a949b561861 SHA1 0629c57d74e553e307badbc8f338d9b7c9956d65 SHA256 39bc0f96e071b24ab3cdc9ab9ba92fbf1a43c8470a98c42e97b04a32e720a22b
 DIST smplayer2-0.7.0_pre20111022.tar.xz 1204408 RMD160 e578d9c785d21b4fc86ce55f5d6b4ef8fe905794 SHA1 4365b16f74da6fb9367d2d32cd43e814fcf45260 SHA256 161b3cebdfa8dfd7ff39c3a6b1e8acd02c5819ba4447d8861f545013131c7605
 EBUILD smplayer2-0.7.0_pre20111022.ebuild 2048 RMD160 aa1525bbd3b06d3377cb9f09d6072df89f35cefb SHA1 67ff8c948e27295f95fb9a06970e5cd99c070ad8 SHA256 dc44e6cc1f94aa113a02a16e1eb740a2ef48994a88f269b8645ecf1e285bb59e
-EBUILD smplayer2-9999.ebuild 2024 RMD160 9d0f433cfeb05dff5c35da0a2c06094cf8c57919 SHA1 efc5a94b2e166a34c6dc5d247b34fa56270a5662 SHA256 56d09ca9d1e3a02564a0216fbbaebfaadebf4aa8a655365fff018020c36b6b97
-MISC ChangeLog 410 RMD160 136708d38d5e5dbc0c48bd8ee2c99a199caf4fcd SHA1 f1019fca439282073e1495f06ef94d3b7eb9a22d SHA256 1b93779b5db9773faf34931cc81ef99f6930f3964a6d499a2f8b32bd6c0011e6
+EBUILD smplayer2-9999.ebuild 1817 RMD160 123f5450defc85fa969bdec1b04358a501617d5c SHA1 16cdd71f17234eccd40413ee82728e9776fbc0c2 SHA256 47b079748e4d6bfb56a32839c1740b41135a22b75d8c0a999224c0124ff75ea0
+MISC ChangeLog 531 RMD160 32306f77051e77266f7dde994f08655ec41ff6ff SHA1 5096790143f52d40924339d3334f941e7a03176d SHA256 eb920e6ffe801540d90ed574da776b4c088574df2ebc5a76dc3b19a3accb588c
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
